# mcp_demo_app

./: .gitignore  CONTEXT_SIZE_ISSUE.MD  DEPLOYMENT_GUIDE.md  Dockerfile  MCP_GUIDE.md  README.md  docker-compose.yml  main_1.py  pyproject.toml
backend/: config.py  main.py
backend/agent/: agent.py  tools.py
backend/api/: routes.py  schemas.py
frontend/: app.py
mcp_server/: notes.json  pyproject.toml  server.py
